Fix issue where profile pictures with lower resolution appeared too small

--- a/frontend/src/components/comment/comment.module.css
+++ b/frontend/src/components/comment/comment.module.css
@@ -30,8 +30,8 @@
 }
 
 .header img {
-    max-width: 50px;
-    max-height: 50px;
+    width: 50px;
+    height: 50px;
     aspect-ratio: 1/1;
 
     object-fit: cover;
