--- a/frontend/src/components/post/post.module.css
+++ b/frontend/src/components/post/post.module.css
@@ -56,8 +56,8 @@
 }
 
 .header > div > img {
-    max-width: 60px;
-    max-height: 60px;
+    width: 60px;
+    height: 60px;
     aspect-ratio: 1/1;
 
     object-fit: cover;
