--- a/frontend/src/components/profile/profile.module.css
+++ b/frontend/src/components/profile/profile.module.css
@@ -17,8 +17,8 @@
 }
 
 .profileUpper > img {
-    max-width: 150px;
-    max-height: 150px;
+    width: 150px;
+    height: 150px;
     aspect-ratio: 1/1;
 
     object-fit: cover;
