--- a/frontend/src/components/profileCard/profileCard.module.css
+++ b/frontend/src/components/profileCard/profileCard.module.css
@@ -11,8 +11,8 @@
 }
 
 .profileUpper  > img {
-    max-width: 80px;
-    max-height: 80px;
+    width: 80px;
+    height: 80px;
     aspect-ratio: 1/1;
 
     object-fit: cover;
