--- a/frontend/src/components/profileSuggestions/profileSuggestions.module.css
+++ b/frontend/src/components/profileSuggestions/profileSuggestions.module.css
@@ -19,8 +19,8 @@
 }
 
 .user img {
-    max-width: 70px;
-    max-height: 70px;
+    width: 70px;
+    height: 70px;
     aspect-ratio: 1/1;
 
     object-fit: cover;
